# atomic-tagged-ptr

./: Cargo.toml  README.md  README_CN.md  build.rs
.github/workflows/: ci.yml
src/: impl.rs  lib.rs  ptr.rs  tag.rs  traits.rs
src/impl/: fallback.rs  ptr32.rs  ptr64.rs
src/ptr/: tagged.rs  wrapper.rs
src/ptr/tagged/: atomic.rs
src/ptr/tagged/atomic/: fallback.rs  tests.rs
tests/: tagged_ptr_tests.rs
